# sample-fastapi

./: .gitignore  README.md  pyproject.toml  recreate_optimized_table.py
app/: __init__.py  main.py
app/api/: constants.py  exception_handlers.py  healthz.py  readyz.py  route_management.py  tags.py
app/api/internal_api/v1alpha1/: __init__.py  abend.py  audit.py  sop.py
app/api/ui_api/: __init__.py
app/api/ui_api/v1alpha1/: __init__.py  abend.py  sop.py
app/core/: abend_service.py  config.py  graphapi.py  sop_service.py
app/core/logger/: struct_logger.py
app/dal/: __init__.py  abend_repository.py  sop_repository.py
app/models/: abend.py  generic_responses.py  sop.py
app/schema/: README.md  __init__.py  abend_dynamo.py  create_tables.py  dynamo_config.py  sop_dynamo.py
app/utils/: __init__.py  constants.py  gitlab.py  pagination.py  s3_helper.py  secrets_manager.py
app/utils/middleware/: __init__.py  auth.py  constants.py  cors.py  logging.py  monitoring.py  security.py
common/certs/: README.md  cacert.pem
deploy/: README.MD
docker/: Dockerfile  docker-entrypoint.sh
docs/: api-reference.md  architecture.md  common_issues.md  deployment.md
examples/: README.md  abend_db_usage.py  abend_schema_examples.py  add_sample_data.py  create_table.py  graphapi_examples.py  query_sample_data.py  recreate_table.py  test_dynamodb.py  verify_gsi.py
scripts/: start.sh
solution_test/: README.md  __init__.py  conftest.py  debug_creation.py  debug_test.py  run_tests.py  test_abend_e2e.py  test_client.py
