[project]
name = "sample"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "asyncio>=3.4.3",
    "fastapi[standard]>=0.116.0",
    "httpx>=0.28.1",
    "structlog>=25.4.0",
    "uvicorn>=0.30.0",
]

[project.scripts]
start-app = "app.main:main"
